--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Dennis Ivy</title>
+	<title>Abdul Rehan</title>
 
 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1" />
@@ -118,7 +118,7 @@
 
 					<a target="_blank" href="https://github.com/rehandxtr">Github: @Rehandxtr</a>
 					<br>
-					<a target="_blank" href="https://twitter.com/dennisivy11">Twitter: @RDxtr</a>
+					<a target="_blank" href="https://twitter.com/rdxtr">Twitter: @RDxtr</a>
 				</div>
 			</div>
 
